トップページ作成
大枠までの作成

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
-body{
-  background: #D9D9D9;
+html, body{
+  width: 100%;
+  background: #2F393A;
   color: #333333;
+  letter-spacing: 0.1em;
+  line-height: 1.6;
 }
 ul{
   list-style: none;
@@ -11,76 +14,95 @@ input{
   box-sizing: border-box;
   background: none;
 }
+button{
+  border: none;
+}
+button:hover{
+  cursor: pointer;
+}
 
 /*////////////////////
  ヘッダー
 ////////////////////*/
-.header{
+#header{
   height: 60px;
-  background: #304848;
-  color: #f3f3f3;
-  text-align: center;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
+  box-shadow: 0 1px 2px #333;
 }
-.header.header--effect{
-  background: rgba(255, 255, 255, 0.5);
+.header{
+  background: #304848;
+  color: #f3f3f3;
+  text-align: center;
+}
+.header.js-header-effect{
+  background: rgba(255, 255, 255, 0.1);
 }
 .header-wrapper{
-  padding-left: 8px;
+  padding-left: 5px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .header_title{
-  width: 260px;
-  padding-top: 15px;
+  width: 295px;
   font-size: 36px;
   font-weight: bold;
   float: left;
-  opacity: none;
 }
 .header_form{
   width: 500px;
-  height: 45px;
+  height: 40px;
   padding: 0 30px;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.8);
   margin: auto ;
   display: flex;
   align-items: center;
 }
-.header_input{
-  width: 45%;
-  height: 90%;
-  font-size: 16px;
+.js-header-effect > .header-wrapper > .header_form{
+  display: none;
 }
-.header_input:last-child{
-  border-left: 1px solid #333;
+
+.header_input{
+  width: 47%;
+  height: 90%;
+  font-size: 15px;
+}
+.header_input:first-child{
+  border-right: 1px solid #333;
+}
+.header_submit{
+  width: 6%;
+  height: 100%;
+  background: none;
 }
 .header_menu{
   float: right;
   display: flex;
-  opacity: none;
 }
 .header_menuItem{
-  padding-right: 20px;
+  width: 100px;
   text-align: center;
 }
 .header_menuItem:hover{
-  opacity: 0.4;
+  background: rgba(255, 255, 255, 0.5);
+  text-decoration: underline;
 }
 .header_menuItem:last-child{
-  padding-right: 0;
+  background: #DE6710;
+  color: #f3f3f3;
+}
+.header_menuItem:last-child:hover{
+  background: #ff9f58;
 }
 .header_menuItem_link{
   padding: calc(30px - 8px) 0;
 }
-.header_menuItem_link--strong{
-  padding-left: 20px;
-  padding-right: 20px;
-}
+
 /*////////////////////
  フッター
 ////////////////////*/
@@ -94,9 +116,134 @@ input{
   padding-top: 150px;
   display: block;
 }
+/*////////////////////
+ 全ページ共通
+////////////////////*/
+.title{
+  font-weight: bold;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  text-align: center;
+  position: relative;
+}
+.title::before{
+  content: '';
+  opacity: 0.2;
+  position: absolute;
+  right: 0;
+  left: 0;
+}
+.title--sizeLL{
+  font-size: 36px;
+}
+.title--sizeL{
+  font-size: 30px;
+}
+.title--sizeL::before{
+  content: '';
+  font-size: 60px;
+  top: -45px;
+  letter-spacing: 0.08em;
+}
+.title--sizeM{
+  font-size: 20px;
+  text-align: left;
+}
+.title--color{
+  color: #f3f3f3;
+}
+.page-wrapper{
+}
+
+
+.section-wrapper{
+  padding: 100px 10% 100px;
+  margin: 0 auto;
+}
+.section--color{
+  background: #D9D9D9;
+}
+.section--color2{
+  background: #304848;
+}
+.contents-wrapper{
+  width: 85%;
+  padding: 0 5px;
+  box-sizing: border-box;
+  margin: 20px auto 40px;
+}
+.contents-wrapper--sizeSS{
+  width: 50%;
+}
+.contents-wrapper--sizeS{
+  width: 70%;
+}
+.contents-wrapper--sizeL{
+  width: 100%;
+}
+#imgSlider{
+  background: #2F393A;
+  width: 100%;
+  border-top: 1px solid #f3f3f3;
+  height: 150px;
+}
+.belt{
+  text-align: center;
+  background: #DE6710;
+  color: #f3f3f3;
+  z-index: 1;
+  position: relative;
+  transition: all 1s;
+}
+.belt::before{
+  content: '';
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.belt:hover::before{
+  opacity: 1;
+}
+.link--belt{
+  padding: 15px 0;
+}
 
 /*////////////////////
- 共通アイテム
+ トップページ
+////////////////////*/
+.firstView{
+  height: 900px;
+  background-image: url('../img/IMG_9461.JPG');
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.firstView_container{
+  height: 30%;
+  opacity: 0.6;
+}
+.firstView_container > .title{
+  padding-bottom: 20px;
+}
+#map > .title::before{
+  content: 'Where will you visit next ?';
+}
+#about > .title::before{
+  content: 'About';
+}
+#search > .title::before{
+  content: 'Search';
+}
+
+/*////////////////////
+ ピンポイントアイテム
 ////////////////////*/
 .strongPoint{
   background: #DE6710;
