--- a/css/style.css
+++ b/css/style.css
@@ -1,257 +1,276 @@
-html, body{
+@charset "UTF-8";
+/*====================
+ 変数
+====================*/
+/*====================
+ ベース
+====================*/
+html,
+body {
   width: 100%;
-  background: #2F393A;
   color: #333333;
-  letter-spacing: 0.1em;
-  line-height: 1.6;
-}
-ul{
-  list-style: none;
-}
-input{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  background-color: #2f393a; }
+
+button {
+  border: none;
+  cursor: pointer; }
+
+img {
+  width: 100%;
+  vertical-align: bottom; }
+
+input {
   padding: 5px 10px;
   border: none;
   box-sizing: border-box;
-  background: none;
-}
-button{
-  border: none;
-}
-button:hover{
-  cursor: pointer;
-}
+  background: none; }
+  input:focus {
+    border: 2px solid #304848; }
+  input:focus-visible {
+    outline: none; }
 
-/*////////////////////
+ul {
+  list-style: none; }
+
+/*====================
  ヘッダー
-////////////////////*/
-#header{
-  height: 60px;
+====================*/
+.header {
+  height: 70px;
+  box-shadow: 0 1px 3px #d9d9d9;
+  background: #304848;
+  color: #f3f3f3;
+  text-align: center;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1000;
-  box-shadow: 0 1px 2px #333;
-}
-.header{
-  background: #304848;
-  color: #f3f3f3;
-  text-align: center;
-}
-.header.js-header-effect{
-  background: rgba(255, 255, 255, 0.1);
-}
-.header-wrapper{
-  padding-left: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header_title{
-  width: 295px;
-  font-size: 36px;
-  font-weight: bold;
-  float: left;
-}
-.header_form{
-  width: 500px;
-  height: 40px;
-  padding: 0 30px;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.8);
-  margin: auto ;
-  display: flex;
-  align-items: center;
-}
-.js-header-effect > .header-wrapper > .header_form{
-  display: none;
-}
+  z-index: 1000; }
+  .header.active {
+    background: rgba(255, 255, 255, 0.1); }
+  .header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header_logo {
+    width: 300px;
+    font-size: 36px;
+    font-weight: bold; }
+  .header_form {
+    width: 500px;
+    height: 40px;
+    padding: 0 30px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 0 auto;
+    display: flex;
+    align-items: center; }
+    .header_form.active {
+      display: none; }
+  .header_input {
+    width: 47%;
+    height: 90%;
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.8); }
+    .header_input::placeholder {
+      color: rgba(255, 255, 255, 0.8); }
+    .header_input:first-child {
+      border-right: 1px solid #333; }
+  .header_submit {
+    width: 6%;
+    height: 100%;
+    background: none; }
+  .header_menu {
+    display: flex; }
+  .header_menuItem {
+    width: 100px;
+    text-align: center; }
+    .header_menuItem:hover {
+      background: rgba(255, 255, 255, 0.5); }
+    .header_menuItem:last-child {
+      background: #de6710;
+      color: #f3f3f3; }
+      .header_menuItem:last-child:hover {
+        background: #ff9f58; }
+    .header_menuItem_link {
+      line-height: 70px;
+      display: block; }
 
-.header_input{
-  width: 47%;
-  height: 90%;
-  font-size: 15px;
-}
-.header_input:first-child{
-  border-right: 1px solid #333;
-}
-.header_submit{
-  width: 6%;
-  height: 100%;
-  background: none;
-}
-.header_menu{
-  float: right;
-  display: flex;
-}
-.header_menuItem{
-  width: 100px;
-  text-align: center;
-}
-.header_menuItem:hover{
-  background: rgba(255, 255, 255, 0.5);
-  text-decoration: underline;
-}
-.header_menuItem:last-child{
-  background: #DE6710;
-  color: #f3f3f3;
-}
-.header_menuItem:last-child:hover{
-  background: #ff9f58;
-}
-.header_menuItem_link{
-  padding: calc(30px - 8px) 0;
-}
-
-/*////////////////////
+/*====================
  フッター
-////////////////////*/
-.footer{
+====================*/
+.footer {
   height: 200px;
-  background: #2F393A;
-  color: #f3f3f3;
-}
-.footer_copyright{
-  text-align: center;
-  padding-top: 150px;
-  display: block;
-}
-/*////////////////////
- 全ページ共通
-////////////////////*/
-.title{
-  font-weight: bold;
-  line-height: 1.5;
-  letter-spacing: 0.05em;
-  text-align: center;
-  position: relative;
-}
-.title::before{
-  content: '';
-  opacity: 0.2;
-  position: absolute;
-  right: 0;
-  left: 0;
-}
-.title--sizeLL{
-  font-size: 36px;
-}
-.title--sizeL{
-  font-size: 30px;
-}
-.title--sizeL::before{
-  content: '';
-  font-size: 60px;
-  top: -45px;
-  letter-spacing: 0.08em;
-}
-.title--sizeM{
-  font-size: 20px;
-  text-align: left;
-}
-.title--color{
-  color: #f3f3f3;
-}
-.page-wrapper{
-}
+  background: #2f393a;
+  color: #f3f3f3; }
+  .footer_copyright {
+    text-align: center;
+    padding-top: 150px;
+    display: block; }
 
+/*====================
+ 共通コンテナ
+====================*/
+.page-wrapper {
+  margin-top: 70px; }
 
-.section-wrapper{
-  padding: 100px 10% 100px;
-  margin: 0 auto;
-}
-.section--color{
-  background: #D9D9D9;
-}
-.section--color2{
-  background: #304848;
-}
-.contents-wrapper{
-  width: 85%;
-  padding: 0 5px;
+.container, .container--baseColor, .container--subColor {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-right: 10%;
+  padding-left: 10%;
+  color: #f3f3f3; }
+  .container--baseColor {
+    background: #d9d9d9;
+    color: #333333; }
+  .container--subColor {
+    background: #304848; }
+  .container_title {
+    font-size: 30px;
+    font-weight: bold;
+    color: #333333;
+    text-align: center;
+    position: relative; }
+    .container_title::before {
+      content: '';
+      font-size: 60px;
+      top: -45px;
+      letter-spacing: 0.08em;
+      opacity: 0.2;
+      position: absolute;
+      right: 0;
+      left: 0; }
+  .container_body {
+    width: 85%;
+    padding: 0 5px;
+    box-sizing: border-box;
+    margin: 40px auto 40px; }
+
+#map > .container_title::before {
+  content: 'Where will you visit next ?'; }
+
+#about > .container_title::before {
+  content: 'About'; }
+
+#search > .container_title::before {
+  content: 'Search'; }
+
+.form {
+  padding: 40px 50px;
+  border-radius: 4px;
   box-sizing: border-box;
-  margin: 20px auto 40px;
-}
-.contents-wrapper--sizeSS{
-  width: 50%;
-}
-.contents-wrapper--sizeS{
-  width: 70%;
-}
-.contents-wrapper--sizeL{
-  width: 100%;
-}
-#imgSlider{
-  background: #2F393A;
-  width: 100%;
-  border-top: 1px solid #f3f3f3;
-  height: 150px;
-}
-.belt{
-  text-align: center;
-  background: #DE6710;
-  color: #f3f3f3;
-  z-index: 1;
-  position: relative;
-  transition: all 1s;
-}
-.belt::before{
-  content: '';
-  background: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.belt:hover::before{
-  opacity: 1;
-}
-.link--belt{
-  padding: 15px 0;
-}
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  margin: 0 auto; }
 
-/*////////////////////
- トップページ
-////////////////////*/
-.firstView{
+.form_title {
+  font-size: 20px;
+  font-weight: bold; }
+
+.contents-wrapper--sizeSS {
+  width: 50%; }
+
+.contents-wrapper--sizeS {
+  width: 70%; }
+
+.contents-wrapper--sizeL {
+  width: 100%; }
+
+/*====================
+ フォーム
+====================*/
+.form {
+  width: 50%;
+  background: #fff;
+  text-align: center; }
+  .form_title {
+    margin-bottom: 30px;
+    text-align: center;
+    color: #333333; }
+  .form_name {
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center; }
+  .form_label {
+    padding: 2px 3px;
+    border-radius: 2px;
+    margin-right: 5px;
+    font-size: 13px;
+    color: #fff; }
+    .form_label--required {
+      background: #ff6565; }
+    .form_label--optional {
+      background: #d9d9d9; }
+  .form_input {
+    height: 45px;
+    width: 100%;
+    border-radius: 3px;
+    background: #d9d9d9; }
+  .form_button {
+    padding: 10px 50px;
+    border-radius: 10px;
+    margin-top: 15px;
+    background: #de6710;
+    box-shadow: 0 4px 1px #552808;
+    font-size: 18px;
+    color: #f3f3f3;
+    letter-spacing: 0.05em; }
+    .form_button:hover {
+      background: #ff9f58; }
+    .form_button:active {
+      box-shadow: none;
+      transform: translateY(4px);
+      transition: .2s; }
+  .form_errMsg {
+    height: 15px;
+    margin-bottom: 15px;
+    font-size: 13px;
+    color: #ff6565; }
+  .form_notion {
+    margin-top: 20px;
+    text-align: right; }
+
+/*====================
+ index.php
+====================*/
+.firstView {
   height: 900px;
-  background-image: url('../img/IMG_9461.JPG');
+  background-image: url("../img/IMG_9461.JPG");
   background-size: cover;
   background-attachment: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.firstView_container{
-  height: 30%;
-  opacity: 0.6;
-}
-.firstView_container > .title{
-  padding-bottom: 20px;
-}
-#map > .title::before{
-  content: 'Where will you visit next ?';
-}
-#about > .title::before{
-  content: 'About';
-}
-#search > .title::before{
-  content: 'Search';
-}
+  background-repeat: no-repeat;
+  position: relative; }
+  .firstView_container {
+    opacity: 0.6;
+    text-align: center;
+    position: absolute;
+    top: 33%;
+    left: 0;
+    right: 0; }
+  .firstView_title {
+    padding-bottom: 20px;
+    color: #f3f3f3;
+    font-size: 36px; }
 
-/*////////////////////
- ピンポイントアイテム
-////////////////////*/
-.strongPoint{
-  background: #DE6710;
-  color: #F3F3F3;
-}
-.link{
-  display: block;
-}
-.link:hover{
-  cursor: pointer;
-}
+#map {
+  overflow: hidden; }
+
+.imgSlider {
+  width: 100vw;
+  height: 150px;
+  border-top: 1px solid #f3f3f3;
+  margin: calc(50% - 50vw); }
+
+/*====================
+  ピンポイントアイテム
+====================*/
+.smallfont {
+  font-size: 13px;
+  letter-spacing: 0.01em; }
+
+.link {
+  cursor: pointer; }
+  .link:hover {
+    text-decoration: underline; }
