index.phpレスポンシブ対応

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,31 @@ $space-l: 30px;
 $space-xl: 40px;
 $space-xxl: 50px;
 
+%imgSize-xs {
+  width: 210px;
+  height: 140px;
+}
+%imgSize-s {
+  width: 270px;
+  height: 180px;
+}
+%imgSize-l {
+  width: 540px;
+  height: 360px;
+}
+
+%contents-wrapper {
+  padding: $space-xl $space-xxl;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+%subTitle {
+  font-size: $fontSize-l;
+  font-weight: bold;
+}
+
+
 
 $breakpoint: (
   'SP': 'screen and (max-width: 430px)',
@@ -70,12 +95,6 @@ input {
   border: none;
   box-sizing: border-box;
   background: none;
-  &:focus {
-    border: 2px solid $siteColor-sub;
-  }
-  &:focus-visible {
-    outline: none;
-  }
 }
 ul {
   list-style: none;
@@ -95,18 +114,28 @@ ul {
   right: 0;
   left: 0;
   z-index: 1000;
+  transition: all 1s;
   &.active {
     background: rgba(255, 255, 255, .1);
   }
   &-wrapper {
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include mqSP() {
+      padding: $space-xxs;
+      box-sizing: border-box;
+      position: relative;
+    };
   }
   &_logo {
-    width: 300px;
+    padding-right: 78px;
     font-size: $fontSize-xxl;
     font-weight: bold;
+    @include mqSP() {
+      padding-right: 0;
+    }
   }
   &_form {
     width: 500px;
@@ -117,9 +146,13 @@ ul {
     margin: 0 auto;
     display: flex;
     align-items: center;
-    &.active {
-      display: none;
+    transition: all 1s;
+    &.nonactive {
+      opacity: 0;
     }
+    @include mqSP() {
+      display: none;
+    };
   }
   &_input{
     width: 47%;
@@ -130,20 +163,72 @@ ul {
       color: rgba(255, 255, 255, .8)
     }
     &:first-child {
-      border-right: 1px solid #333;
+      border-right: 1px solid rgba(255, 255, 255, .8);
     }
   }
   &_submit {
     width: 6%;
     height: 100%;
     background: none;
+    color: $fontColor-sub;
+  }
+  &_humburger {
+    display: none;
+    height: 44px;
+    width: 50px;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    transition: all .4s;
+    @include mqSP() {
+      display: inline-block;
+    }
+    & span {
+      width: 100%;
+      position: absolute;
+      left: 0;
+      height: 4px;
+      background: $fontColor-sub;
+      &:nth-of-type(1) {
+        top: 0;
+      }
+      &:nth-of-type(2) {
+        top: 20px;
+      }
+      &:nth-of-type(3) {
+        bottom: 0;
+      }
+    }
   }
   &_menu {
-    display: flex;
+    @include mqSP() {
+      width: 100%;
+      padding: 70px $space_l $space-s;
+      box-sizing: border-box;
+      background: rgba(48, 72, 72, .8);
+      position: absolute;
+      top: 0;
+      right: -100%;
+      transition: 1.5s;
+    }
+    &.active {
+      right: 0;
+    }
   }
-  &_menuItem {
+}
+
+// メニュー
+.menu {
+  display: flex;
+  @include mqSP() {
+    flex-direction: column;
+  }
+  &_item {
     width: 100px;
     text-align: center;
+    @include mqSP() {
+      width: 100%;
+    }
     &:hover {
       background: rgba(255, 255, 255, 0.5);
     }
@@ -152,6 +237,13 @@ ul {
       color: $fontColor-sub;
       &:hover {
         background: $siteColor-accent-hover;
+      }
+    }
+    &--sp {
+      @extend .menu_item;
+      display: none;
+      @include mqSP () {
+        display: block;
       }
     }
     &_link {
@@ -165,13 +257,19 @@ ul {
  フッター
 ====================*/
 .footer{
-  height: 200px;
+  height: 150px;
   background: $siteColor;
   color: $fontColor-sub;
   &_copyright {
     text-align: center;
     padding-top: 150px;
     display: block;
+    br {
+      display: none;
+      @include mqSP() {
+        display: inline;
+      }
+    }
   }
 }
 /*====================
@@ -185,6 +283,7 @@ ul {
   padding-bottom: 100px;
   padding-right: 10%;
   padding-left: 10%;
+  text-align: center;
   color: $fontColor-sub;
   &--baseColor {
     @extend .container;
@@ -198,7 +297,6 @@ ul {
   &_title {
     font-size: $fontSize-xl;
     font-weight: bold;
-    color: $fontColor-default;
     text-align: center;
     position: relative;
     &::before {
@@ -216,51 +314,175 @@ ul {
     width: 85%;
     padding: 0 $space-xxs;
     box-sizing: border-box;
-    margin: $space-xl auto $space-xl;
+    margin: $space-xl auto 0;
+    @include mqSP() {
+      width: 100%;
+    }
+    &--l {
+      @extend .container_body;
+      width: 100%;
+    }
+    &--s {
+      @extend .container_body;
+      width: 70%;
+    }
+    &--xs {
+      @extend .container_body;
+      width: 50%;
+    }
   }
 }
-#map > .container_title::before{
-  content: 'Where will you visit next ?';
+/*====================
+ index.php
+====================*/
+.firstView {
+  height: 900px;
+  background-image: url('../img/IMG_9461.JPG');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  &_container {
+    opacity: 0.6;
+    text-align: center;
+    position: absolute;
+    top: 33%;
+    left: 0;
+    right: 0;
+  }
+  &_title {
+    padding-bottom: $space-m;
+    color: $fontColor-sub;
+    font-size:$fontSize-xxl;
+    span {
+      @include mqSP() {
+        display: none;
+      }
+    }
+    br {
+      display: none;
+      @include mqSP() {
+        display: inline;
+      }
+    }
+  }
 }
-#about > .container_title::before{
+.map {
+  overflow: hidden;
+  position: relative;
+  &>.container_title::before {
+    content: 'Where will you visit next ?';
+  }
+  @include mqSP() {
+    display: none;
+  }
+}
+.imgSlider {
+  width: 100vw;
+  border-top: 1px solid $fontColor-sub;
+  padding: $space-xxs 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  display: flex;
+  &_item {
+    padding: 0 $space-xs;
+  }
+  &_img {
+    @extend %imgSize-xs;
+  }
+}
+#about > .container_title::before {
   content: 'About';
 }
-#search > .container_title::before{
+#search > .container_title::before {
   content: 'Search';
 }
-
-%contents-wrapper {
-  padding: $space-xl $space-xxl;
-  border-radius: 4px;
-  box-sizing: border-box;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
-  margin: 0 auto;
-}
-%subTitle {
-  font-size: $fontSize-l;
-  font-weight: bold;
-}
-
-.contents-wrapper--sizeSS{
-  width: 50%;
-}
-.contents-wrapper--sizeS{
-  width: 70%;
-}
-.contents-wrapper--sizeL{
-  width: 100%;
-}
 /*====================
- フォーム
+ index.php > feature
+====================*/
+.features-wrapper {
+  @extend %contents-wrapper;
+  padding: $space-xl $space-xxl;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  @include mqSP() {
+    padding: 0;
+    box-shadow: none;
+  }
+}
+.feature {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-bottom: $space-xxl;
+  @include mqSP() {
+    flex-direction:column;
+  }
+  &:last-child {
+    padding-bottom: 0;
+  }
+  &--reverse {
+    flex-direction: row-reverse;
+    @include mqSP() {
+      flex-direction: column;
+    }
+  }
+  &_img {
+    @extend %imgSize-l;
+    @include mqSP() {
+      width: 270px;
+      height: 180px;
+      padding-bottom: $space-xs;
+    }
+  }
+  &_description {
+    width: 35%;
+    box-sizing: border-box;
+    @include mqSP() {
+      width: 100%;
+    }
+  }
+  &_title {
+    @extend %subTitle;
+    text-align: center;
+    padding-bottom: $space_s;
+  }
+}
+
+/*====================
+ list
+====================*/
+.list {
+  @extend %contents-wrapper;
+  box-shadow: none;
+  padding-top: $space-m;
+  @include mqSP() {
+    padding: 0 0 $space-l;
+  }
+
+  &--destination {
+    @extend .list;
+    padding-right: $space-xs;
+    padding-left: $space-xs;
+  }
+  &_title {
+    @extend %subTitle;
+    padding-bottom: $space-s;
+  }
+}
+
+
+/*====================
+ form
 ====================*/
 .form {
   @extend %contents-wrapper;
-  width: 50%;
   background: #fff;
   text-align: center;
   &_title {
     @extend %subTitle;
-    margin-bottom: $space-l;
+    margin-bottom: $space-xl;
     text-align: center;
     color: $fontColor-default;
   }
@@ -287,23 +509,31 @@ ul {
     width: 100%;
     border-radius: 3px;
     background: $siteColor-base;
+    &:focus-visible {
+      outline: none;
+    }
+    &:focus {
+      border: 2px solid $siteColor-sub;
+    }
   }
   &_button {
-    padding: $space-xs $space-xxl;
+    width: 45%;
+    padding: $space-xs 0;
     border-radius: 10px;
-    margin-top: $space-s;
+    box-sizing: border-box;
+    margin: $space-s 0;
     background: $siteColor-accent;
     box-shadow: 0 4px 1px #552808;
     font-size: $fontSize-m;
     color: $fontColor-sub;
     letter-spacing: 0.05em;
+    transition: .1s;
     &:hover {
       background: $siteColor-accent-hover;
     }
     &:active {
       box-shadow: none;
       transform: translateY(4px);
-      transition: .2s;
     }
   }
   &_errMsg {
@@ -313,49 +543,10 @@ ul {
     color: $siteColor-err;
   }
   &_notion {
-    margin-top: $space-m;
+    margin-top: $space-xs;
     text-align: right;
   }
 }
-
-/*====================
- index.php
-====================*/
-.firstView {
-  height: 900px;
-  background-image: url('../img/IMG_9461.JPG');
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  position: relative;
-  &_container {
-    opacity: 0.6;
-    text-align: center;
-    position: absolute;
-    top: 33%;
-    left: 0;
-    right: 0;
-  }
-  &_title {
-    padding-bottom: $space-m;
-    color: $fontColor-sub;
-    font-size:$fontSize-xxl;
-  }
-}
-
-#map{
-  overflow: hidden;
-}
-.imgSlider{
-  width: 100vw;
-  height: 150px;
-  border-top: 1px solid $fontColor-sub;
-  margin: calc(50% - 50vw);
-}
-
-
-
-
 
 
 /*====================
