--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,19 +40,6 @@ $space-xxl: 50px;
   height: 360px;
 }
 
-%contents-wrapper {
-  padding: $space-xl $space-xxl;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin: 0 auto;
-}
-%subTitle {
-  font-size: $fontSize-l;
-  font-weight: bold;
-}
-
-
-
 $breakpoint: (
   'SP': 'screen and (max-width: 430px)',
   'TAB': 'screen and (max-width: 1024px)'
@@ -68,6 +55,21 @@ $breakpoint: (
   @media #{map-get($breakpoint, 'TAB')}{
     @content;
   }
+}
+%contents-wrapper {
+  padding: $space-xl $space-xxl;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  @include mqSP() {
+    padding: $space-m $space-s;
+  }
+}
+%subTitle {
+  font-weight: bold;
+  font-size: $fontSize-l;
+  text-align: center;
+  padding-bottom: $space-m;
 }
 
 /*====================
@@ -141,9 +143,10 @@ ul {
     width: 500px;
     height: 40px;
     padding: 0 $space-l;
-    border-radius: 20px;
-    background: rgba(255, 255, 255, .5);
     margin: 0 auto;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, .3);
+    box-shadow: 0 0 5px $siteColor;
     display: flex;
     align-items: center;
     transition: all 1s;
@@ -158,9 +161,14 @@ ul {
     width: 47%;
     height: 90%;
     font-size: 15px;
-    color: rgba(255, 255, 255, .8);
+    color: $fontColor-sub;
+    text-shadow: 0 0 5px $siteColor;
     &::placeholder {
       color: rgba(255, 255, 255, .8)
+    }
+    &:focus {
+      outline: none;
+      border-bottom: 2px solid white;
     }
     &:first-child {
       border-right: 1px solid rgba(255, 255, 255, .8);
@@ -279,12 +287,9 @@ ul {
   margin-top: 70px;
 }
 .container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  padding-right: 10%;
-  padding-left: 10%;
-  text-align: center;
   color: $fontColor-sub;
+  padding: 80px 0 100px;
+  text-align: center;
   &--baseColor {
     @extend .container;
     background: $siteColor-base;
@@ -310,25 +315,36 @@ ul {
       left: 0;
     }
   }
+  &_notion {
+    br {
+      display: none;
+      @include mqSP() {
+        display: inline;
+      }
+    }
+  }
   &_body {
-    width: 85%;
-    padding: 0 $space-xxs;
+    max-width: 1000px;
+    padding: 0 $space-xs;
     box-sizing: border-box;
     margin: $space-xl auto 0;
-    @include mqSP() {
-      width: 100%;
-    }
     &--l {
       @extend .container_body;
-      width: 100%;
+      max-width: 1220px;
     }
     &--s {
       @extend .container_body;
       width: 70%;
+      @include mqSP() {
+        width: 100%;
+      }
     }
     &--xs {
       @extend .container_body;
-      width: 50%;
+      max-width: 35%;
+      @include mqSP() {
+        max-width: 100%;
+      }
     }
   }
 }
@@ -379,12 +395,15 @@ ul {
   }
 }
 .imgSlider {
-  width: 100vw;
+  width: 100%;
   border-top: 1px solid $fontColor-sub;
   padding: $space-xxs 0;
   box-sizing: border-box;
   overflow: hidden;
-  display: flex;
+  &_list {
+    display: flex;
+    flex-wrap: nowrap;
+  }
   &_item {
     padding: 0 $space-xs;
   }
@@ -445,8 +464,6 @@ ul {
   }
   &_title {
     @extend %subTitle;
-    text-align: center;
-    padding-bottom: $space_s;
   }
 }
 
@@ -463,12 +480,9 @@ ul {
 
   &--destination {
     @extend .list;
-    padding-right: $space-xs;
-    padding-left: $space-xs;
   }
   &_title {
     @extend %subTitle;
-    padding-bottom: $space-s;
   }
 }
 
@@ -479,12 +493,12 @@ ul {
 .form {
   @extend %contents-wrapper;
   background: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
   text-align: center;
   &_title {
     @extend %subTitle;
-    margin-bottom: $space-xl;
-    text-align: center;
     color: $fontColor-default;
+    padding-bottom: $space-xl;
   }
   &_name {
     margin-bottom: $space-xxs;
